--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/icon-180x180.png">
 
     <link rel="icon" href="/favicon.ico" />
+    <script src="https://js.instamojo.com/v1/button.js"></script>
     <title>React.js Boilerplate</title>
   </head>
   <body>
